# ai-github-action

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  a2as.yaml  action.yml  github_agent.py  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  code-scan.yaml  dogfood.yaml  issue-analyze.yaml
actions/: code_scan.py  issue_analyze.py  pr_review.py
examples/: code-scan.yml  issue-analyze.yml  pr-review.yml
src/: constants.py  github_agent.py  main.py  py.typed
src/actions/: code_scan.py  issue_analyze.py  pr_review.py
src/context/: github_context.py
src/github_agents/: __init__.py  code_scan_agent.py  github_agent.py  issue_analyze_agent.py  pr_review_agent.py
src/tools/: __init__.py  github_function_tools.py
tests/: conftest.py  test_code_scan.py  test_constants.py  test_github_agent.py  test_github_tools.py  test_issue_analyze.py  test_issue_analyze_agent.py  test_main.py  test_pr_review.py
tools/: github_tools.py
