[tool.poetry]
name = "ai-github-action"
version = "0.1.0"
description = "GitHub Action for AI-powered automation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.66.2"
requests = "^2.32.3"
PyGithub = "^2.6.1"
GitPython = "^3.1.44"
PyYAML = "^6.0.2"
pydantic = "^2.10.6"
glob2 = "^0.7"
openai-agents = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.15.0"
flake8 = "^7.1.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
github-agent = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto" 