[project]
name = "ai-github-action"
version = "0.1.0"
description = "GitHub Action for AI-powered automation"
license = "MIT"
authors = [
    {name = "Roberto Aguirre", email = "roaguirred@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "openai==1.66.2",
    "requests==2.32.3",
    "PyGithub==2.6.1",
    "GitPython==3.1.44",
    "PyYAML==6.0.2",
    "pydantic==2.10.6",
    "glob2==0.7",
    "openai-agents==0.0.4",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "black==23.12.1",
    "isort==5.13.2",
    "mypy==1.15.0",
    "flake8==7.1.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto" 