[project]
name = "ai-github-action"
version = "0.1.0"
description = "GitHub Action for AI-powered automation"
license = "MIT"
authors = [
    {name = "Roberto Aguirre", email = "roaguirred@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "PyGithub==2.6.1",
    "pydantic==2.10.6",
    "openai-agents==0.0.11",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "ruff==0.11.5",
    "mypy==1.15.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Format docstrings
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = 3.12
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true